@@ -1,5 +1,6 @@
 == master
 
+* Fix scopes in Sequel not working if the table name contains double underscores or is not a string/symbol
 * Add full support for chaining state scopes within Sequel integrations
 * Fix Rails 3.1 deprecation warnings for configuring engine locales [Stefan Penner]
 
